package edu.csu.caloriecounter.domain;
public enum MealType { BREAKFAST, LUNCH, DINNER, SNACKS }
